--- a/src/main/webapp/app/entities/message-room/message-room-detail.component.html
+++ b/src/main/webapp/app/entities/message-room/message-room-detail.component.html
@@ -34,6 +34,12 @@
         <dd>
             <span>{{messageRoom.isPublic}}</span>
         </dd>
+        <dt><span jhiTranslate="halospainleagueApp.messageRoom.player">Player</span></dt>
+        <dd>
+            <span *ngFor="let player of messageRoom.players; let last = last">
+                <a [routerLink]="['/player', player?.id ]">{{player.name}}</a>{{last ? '' : ', '}}
+            </span>
+        </dd>
     </dl>
 
     <button type="submit"
