Updated ProfileCOnfiguration entity

--- a/src/main/webapp/app/entities/player/player-detail.component.html
+++ b/src/main/webapp/app/entities/player/player-detail.component.html
@@ -82,6 +82,12 @@
         <dd>
             {{player.user?.login}}
         </dd>
+        <dt><span jhiTranslate="halospainleagueApp.player.profileConfiguration">Profile Configuration</span></dt>
+        <dd>
+            <div *ngIf="player.profileConfiguration">
+                <a [routerLink]="['/profile-configuration', player.profileConfiguration?.id]">{{player.profileConfiguration?.id}}</a>
+            </div>
+        </dd>
         <dt><span jhiTranslate="halospainleagueApp.player.country">Country</span></dt>
         <dd>
             <div *ngIf="player.country">
