--- a/src/main/webapp/app/entities/match-mode/match-mode-dialog.component.html
+++ b/src/main/webapp/app/entities/match-mode/match-mode-dialog.component.html
@@ -36,6 +36,13 @@
             </select>
         </div>
 
+        <div class="form-group">
+            <label class="form-control-label" jhiTranslate="halospainleagueApp.matchMode.match" for="field_match">Match</label>
+            <select class="form-control" id="field_match" name="match" [(ngModel)]="matchMode.match" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="matchOption.id === matchMode.match?.id ? matchMode.match : matchOption" *ngFor="let matchOption of matches; trackBy: trackMatchById">{{matchOption.reference}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
