--- a/src/main/webapp/app/entities/team/team-dialog.component.html
+++ b/src/main/webapp/app/entities/team/team-dialog.component.html
@@ -122,6 +122,13 @@
                 <option [ngValue]="getSelected(team.teamLists, teamListOption)" *ngFor="let teamListOption of teamlists; trackBy: trackTeamListById">{{teamListOption.reference}}</option>
             </select>
         </div>
+        <div class="form-group">
+            <label class="form-control-label" jhiTranslate="halospainleagueApp.team.division" for="field_division">Division</label>
+            <select class="form-control" id="field_division" name="division" [(ngModel)]="team.division" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="divisionOption.id === team.division?.id ? team.division : divisionOption" *ngFor="let divisionOption of divisions; trackBy: trackDivisionById">{{divisionOption.name}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
