--- a/src/main/webapp/app/entities/team-list/team-list-detail.component.html
+++ b/src/main/webapp/app/entities/team-list/team-list-detail.component.html
@@ -12,6 +12,12 @@
         <dd>
             <span>{{teamList.score}}</span>
         </dd>
+        <dt><span jhiTranslate="halospainleagueApp.teamList.team">Team</span></dt>
+        <dd>
+            <span *ngFor="let team of teamList.teams; let last = last">
+                <a [routerLink]="['/team', team?.id ]">{{team.name}}</a>{{last ? '' : ', '}}
+            </span>
+        </dd>
     </dl>
 
     <button type="submit"
