--- a/src/main/webapp/app/entities/team-list/team-list-dialog.component.html
+++ b/src/main/webapp/app/entities/team-list/team-list-dialog.component.html
@@ -23,6 +23,12 @@
                 [(ngModel)]="teamList.score"  />
         </div>
 
+        <div class="form-group">
+            <label jhiTranslate="halospainleagueApp.teamList.team" for="field_team">Team</label>
+            <select class="form-control" id="field_team" multiple name="team" [(ngModel)]="teamList.teams">
+                <option [ngValue]="getSelected(teamList.teams, teamOption)" *ngFor="let teamOption of teams; trackBy: trackTeamById">{{teamOption.name}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
